--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,6 @@ test:
   coverage: '/^Statements\s*:\s*([^%]+)/'
   script:
     - npm run lint
-    - npm run build --if-present
-    - npm run coverage
 
   cache:
     key: "${CI_COMMIT_REF_SLUG}"
@@ -36,6 +34,32 @@ test:
   artifacts:
     reports:
       cobertura: coverage/cobertura-coverage.xml
+
+build-site:
+  stage: post-test
+
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}"
+    paths:
+      - node_modules
+      - build
+
+  variables:
+    NODE_ENV: "production"
+    INLINE_RUNTIME_CHUNK: "false"
+
+  script:
+     - npm run build
+
+  only:
+    - master
+    - tags
+
+  artifacts:
+    when: on_success
+    expire_in: 1 day
+    paths:
+      - build
 
 .docker-job:
 
